--- a/HelloWorldAI.ipynb
+++ b/HelloWorldAI.ipynb
@@ -354,7 +354,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "exemple retrouvé sur : https://interestedinai.com/post/a-beginner-s-guide-to-creating-a-simple-ai-program-in-python"
+        "exemple retrouvé sur : https://interestedinai.com/post/a-beginner-s-guide-to-creating-a-simple-ai-program-in-python \n dataset trouvé à : https://www.kaggle.com/datasets/muhammadbinimran/housing-price-prediction-data?resource=download"
       ],
       "metadata": {
         "id": "9JAtsUZkQczm"
