Finalisation de l'adaptation des données audios

--- a/VoxNote.ipynb
+++ b/VoxNote.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -64,7 +66,7 @@
       "source": [
         "\n",
         "#adaptation de https://github.com/musikalkemist/pytorchforaudio\n",
-        "import os\n",
+        "\n",
         "import torch\n",
         "import torchaudio\n",
         "from torch.utils.data import Dataset\n",
@@ -76,11 +78,13 @@
         "  #Initialise les aurguments de la classe dataset:\n",
         "  # 1.fichier annotation(fichier txt qui contient tous les noms des fichiers audio (wav))\n",
         "  # 2.fichier audio ( contient tous les fichiers audio(wav))\n",
-        "  def __init__(self,FICHIER_ANNOTE,FICHIER_AUDIO, melSpectrogram, SAMPLE_RATE):\n",
+        "  def __init__(self,FICHIER_ANNOTE,FICHIER_AUDIO, melSpectrogram, SAMPLE_RATE, NOMBRE_ECHANTILLONS, processeur):\n",
         "    self.fichierAnnotations=pd.read_csv(FICHIER_ANNOTE)\n",
         "    self.fichierAudio=FICHIER_AUDIO\n",
-        "    self.melSpectrogram = melSpectrogram\n",
+        "    self.processeur = processeur\n",
+        "    self.melSpectrogram = melSpectrogram.to(processeur) #s'assurer que tout se fasse au même endroit dans l'ordinateur : https://stackoverflow.com/questions/63061779/pytorch-when-do-i-need-to-use-todevice-on-a-model-or-tensor\n",
         "    self.SAMPLE_RATE_VOULU = SAMPLE_RATE\n",
+        "    self.NOMBRE_ECHANTILLONS = NOMBRE_ECHANTILLONS\n",
         "\n",
         "  #retourne le nombre de fichiers dans notre dataset\n",
         "  def __len__(self):\n",
@@ -92,13 +96,22 @@
         "    texte = self.getAudioSampleText(index)\n",
         "    #signal informatique et sample rate de notre audio\n",
         "    signal, sr = torchaudio.load(pathAudio)\n",
-        "    #normaliser l'audio et le mettre dans le spectogram de mel\n",
+        "\n",
+        "    #mettre le signal au même endroit que sa transformation\n",
+        "    signal = signal.to(processeur)\n",
+        "\n",
+        "    #normaliser l'audio\n",
         "    signal = self.resampleSiNecessaire(signal, sr)\n",
         "    signal = self.combinerSiNecessaire(signal)\n",
+        "    #diminuer ou ajouter des échantillons \"vides\" si le nombre d'échantillons ne correspond à 22 050\n",
+        "    signal = self.couperSiNecessaire(signal)\n",
+        "    signal = self.paddingSiNecessaire(signal)\n",
+        "\n",
+        "    #transformer l'audio dans le spectogram de mel\n",
         "    signal = self.melSpectrogram(signal)\n",
         "    return signal, texte\n",
         "\n",
-        "  #mettre tous les fichiers audios au même nombre d'échantillons par seconde\n",
+        "  #mettre tous les fichiers audios à la même fréquence d'échantillonage\n",
         "  def resampleSiNecessaire(self, signal, sr):\n",
         "    if sr != self.SAMPLE_RATE_VOULU :\n",
         "      resampler = torchaudio.transforms.Resample(sr, self.SAMPLE_RATE_VOULU)\n",
@@ -109,6 +122,20 @@
         "  def combinerSiNecessaire(self, signal):\n",
         "    if signal.shape[0] > 1 :\n",
         "      signal = torch.mean(signal, dim=0, keepdim= True)\n",
+        "    return signal\n",
+        "\n",
+        "  #enlever les échantillons audios superflus\n",
+        "  def couperSiNecessaire(self, signal) :\n",
+        "    #le signal est composé de 2 dimensions : [nombre de source du signal(1 dans ce cas), longueur du signal – nombre d'échantillons (on veut 22 050)]\n",
+        "    if signal.shape[1] > self.NOMBRE_ECHANTILLONS :\n",
+        "      signal = signal[:, :self.NOMBRE_ECHANTILLONS] #utilité de [:, :] : la première dimension est prise au complet et la deuxième jusqu'à l'atteinte du nombre d'échantillon (expliquer à https://youtu.be/WyJvrzVNkOc?list=PL-wATfeyAMNoirN4idjev6aRu8ISZYVWm&t=478)\n",
+        "    return signal\n",
+        "\n",
+        "  def paddingSiNecessaire(self, signal) :\n",
+        "    #la longueur du signal = signal.shape[1] comme expliqué précédemment\n",
+        "    if signal.shape[1] < self.NOMBRE_ECHANTILLONS :\n",
+        "      paddingDuSignal = (0, self.NOMBRE_ECHANTILLONS - signal.shape[1]) #(0, nombre d'échantillons manquants)\n",
+        "      torch.nn.functional.pad(signal, paddingDuSignal) #ajoute le padding au signal (https://pytorch.org/docs/stable/generated/torch.nn.functional.pad.html)\n",
         "    return signal\n",
         "\n",
         "\n",
@@ -127,6 +154,14 @@
         "\n",
         "#nombre d'échantillons par secondes dans notre audio\n",
         "SAMPLE_RATE = 22050\n",
+        "NOMBRE_ECHANTILLONS = 22050\n",
+        "\n",
+        "if torch.cuda.is_available(): #détermine ce qui exécute le programme (gpu préférable pour AI audio)\n",
+        "    processeur = \"cuda\"\n",
+        "else:\n",
+        "    processeur = \"cpu\"\n",
+        "print(f\"Utiliation du processeur {processeur}\")\n",
+        "\n",
         "#le Spectogram de Mel est une échelle logarithmique utilisée pour mieux représenter les différences qu'un humain entend dans un fichier audio ce qui aide à l'analyse sonore\n",
         "melSpectrogram = torchaudio.transforms.MelSpectrogram(\n",
         "    SAMPLE_RATE,\n",
@@ -136,13 +171,49 @@
         ")\n",
         "\n",
         "\n",
-        "rvd = ReconnaissanceVocaleDataset(FICHIER_ANNOTE, FICHIER_AUDIO, melSpectrogram, SAMPLE_RATE)\n"
+        "rvd = ReconnaissanceVocaleDataset(FICHIER_ANNOTE, FICHIER_AUDIO, melSpectrogram, SAMPLE_RATE, NOMBRE_ECHANTILLONS, processeur)\n"
       ],
       "metadata": {
-        "id": "a4QSC_m-8aL-"
+        "id": "a4QSC_m-8aL-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "133d9792-d620-43a4-ecde-74dc86ab2d41"
       },
-      "execution_count": 48,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Utiliation du cuda\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive #nécessaire qu début de chaque session\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UL25QMQ9YtRV",
+        "outputId": "17f706ec-fed2-42dc-af49-0a18b295244f"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -152,12 +223,12 @@
         "#drive.mount('/content/drive')\n",
         "\n",
         "\n",
-        "#!unzip file.zip"
+        "#!unzip file.zip\n"
       ],
       "metadata": {
         "id": "iSiu0ku4h3lz"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
