Ébauche initiale du réseau de neurone

--- a/VoxNote.ipynb
+++ b/VoxNote.ipynb
@@ -39,31 +39,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#Alphabet dans : https://github.com/dallal9/French-NLP"
-      ],
-      "metadata": {
-        "id": "gO8hYysRS1Bx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Initialisation des caractères possibles\n",
-        "alphabet = [' ','a', 'à', 'A', 'Á', 'À', 'Â', 'Ä', 'Ã', 'Å', 'r', 'd', 'v', 'k', 's', 'b', 'i', 'e', 'n', 't', 'â', 'm', 'z', 'o', 'é', 'è', 'q', 'u', 'î', '-', 'j', 'g', 'l', 'x', 'y', 'c', 'ê', 'h', 'f', 'p', 'B', 'S', 'û', 'ç', 'ô', 'X', 'ï', 'D', 'N', 'Æ', 'G', 'T', 'C', 'ë', 'K', 'L', 'w', 'ö', 'P', 'I', 'R', \"'\", 'Z', 'E', 'H', 'Ç', 'O', 'M', 'É', 'U', 'V', 'Ð', 'ü', 'È', 'Ê', 'Ë', 'F', 'Q', '3', 'W', 'Í', 'Ì', 'Î', 'Ï', 'J', 'Y', '/', 'Ñ', 'Ó', 'Ò', 'Ô', 'Ö', 'Õ', 'Ø', 'ù', 'þ', 'Ú', 'Ù', 'Û', 'Ü', 'Ý']\n",
-        "chiffres = ['1','2','3','4','5','6','7','8','9','0']\n",
-        "caracteresPossible = alphabet + chiffres\n"
-      ],
-      "metadata": {
-        "id": "jKqKD9Si5JK8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "\n",
         "#adaptation de https://github.com/musikalkemist/pytorchforaudio\n",
         "\n",
@@ -239,6 +214,220 @@
       "metadata": {
         "id": "ydEmnsTDS43i"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#connaissances nécessaires au CNN trouvées à l'adresse suivante : https://ketanhdoshi.github.io/Audio-ASR/\n",
+        "#CNN initial vient de https://www.youtube.com/watch?v=SQ1iIKs190Q&list=PL-wATfeyAMNoirN4idjev6aRu8ISZYVWm&index=8\n",
+        "\n",
+        "import torch\n",
+        "import torchaudio\n",
+        "from torch import nn\n",
+        "!torch -m pip install torchsummary\n",
+        "from torchsummary import summary\n",
+        "\n",
+        "class CNNNEtwork(nn.Module) :\n",
+        "  def __init__(self, nbCaracteresPossible) :\n",
+        "    super().__init__()\n",
+        "    outChannelsInitial = 128\n",
+        "    # 4 conv blocks / flatten / linear /softmax\n",
+        "    \"\"\"\n",
+        "    1. Créer les 4 blocs du CNN\n",
+        "    2. 'flatten' le résultat en diminuant le nombre de dimensions créées avec les blocs du CNN\n",
+        "    3. transformer en équation linéaire les données fournies : https://docs.kanaries.net/topics/Python/nn-linear\n",
+        "    4. normaliser les résultats à l'aide de softmax\n",
+        "    \"\"\"\n",
+        "    self.conv1 = nn.Sequential(\n",
+        "        nn.Conv2d( #couche en 2 dimensions\n",
+        "            in_channels=1, #nombre de input initial (=1 lors de l'adaptation des données)\n",
+        "            out_channels=outChannelsInitial, #nombre de filtre dans cette couche du réseau de neurone\n",
+        "            kernel_size=3, #nombre de choses analysées en même temps : https://stats.stackexchange.com/questions/296679/what-does-kernel-size-mean\n",
+        "            stride = 1, #déplacement du kernel : https://deepai.org/machine-learning-glossary-and-terms/stride\n",
+        "            padding = 2 #comme dans RSD mais pour le kernel\n",
+        "        ),\n",
+        "        nn.ReLU(), #régression linéaire\n",
+        "        nn.MaxPool2d(kernel_size=2) # reformulation des données : https://www.geeksforgeeks.org/apply-a-2d-max-pooling-in-pytorch/\n",
+        "    )\n",
+        "    self.conv2 = nn.Sequential(\n",
+        "        nn.Conv2d(\n",
+        "            in_channels=outChannelsInitial, # = au out_channels précédent\n",
+        "            out_channels=outChannelsInitial*2, # out_channels précédent *2\n",
+        "            kernel_size=3,\n",
+        "            stride = 1,\n",
+        "            padding = 2\n",
+        "        ),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(kernel_size=2)\n",
+        "    )\n",
+        "    self.conv3 = nn.Sequential(\n",
+        "        nn.Conv2d(\n",
+        "            in_channels=outChannelsInitial*2,\n",
+        "            out_channels=outChannelsInitial*4,\n",
+        "            kernel_size=3,\n",
+        "            stride = 1,\n",
+        "            padding = 2\n",
+        "        ),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(kernel_size=2)\n",
+        "    )\n",
+        "    self.conv4 = nn.Sequential(\n",
+        "        nn.Conv2d(\n",
+        "            in_channels=outChannelsInitial*4,\n",
+        "            out_channels=outChannelsInitial*8,\n",
+        "            kernel_size=3,\n",
+        "            stride = 1,\n",
+        "            padding = 2\n",
+        "        ),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(kernel_size=2)\n",
+        "    )\n",
+        "    self.flatten = nn.Flatten()\n",
+        "    self.linear = nn.Linear(outChannelsInitial*8 *5 * 4, #input (out_channels final, fréquence, temps)\n",
+        "                            nbCaracteresPossible #nb de output\n",
+        "                            )\n",
+        "    self.softmax = nn.Softmax(dim=1)\n",
+        "\n",
+        "  def forward(self, input_data): #envoyer les données d'une couche à une autre\n",
+        "    x = self.conv1(input_data)\n",
+        "    x = self.conv2(x)\n",
+        "    x = self.conv3(x)\n",
+        "    x = self.conv4(x)\n",
+        "    #passer le x des convolutional layers vers le flatten\n",
+        "    x = self.flatten(x)\n",
+        "    logits = self.linear(x) #logits signifie la probabilité (avant d'être normaliser) associée à certaines réponses : https://www.linkedin.com/posts/mwitiderrick_what-are-logits-in-deep-learning-logits-activity-7084819307959902209-UUGe#:~:text=Logits%20are%20the%20outputs%20of%20a%20neural%20network%20before%20the,belonging%20to%20a%20certain%20class.\n",
+        "    predictions = self.softmax(logits) #normaliser les logits\n",
+        "    return predictions\n",
+        "#algorithme pour le mapping prit sur https://www.assemblyai.com/blog/end-to-end-speech-recognition-pytorch/\n",
+        "char_map_str = \"\"\"\n",
+        " ' 0\n",
+        " <SPACE> 1\n",
+        " a 2\n",
+        " b 3\n",
+        " c 4\n",
+        " d 5\n",
+        " e 6\n",
+        " f 7\n",
+        " g 8\n",
+        " h 9\n",
+        " i 10\n",
+        " j 11\n",
+        " k 12\n",
+        " l 13\n",
+        " m 14\n",
+        " n 15\n",
+        " o 16\n",
+        " p 17\n",
+        " q 18\n",
+        " r 19\n",
+        " s 20\n",
+        " t 21\n",
+        " u 22\n",
+        " v 23\n",
+        " w 24\n",
+        " x 25\n",
+        " y 26\n",
+        " z 27\n",
+        " - 28\n",
+        " <EMP> 29\n",
+        " à 30\n",
+        " â 31\n",
+        " ä 32\n",
+        " é 33\n",
+        " è 34\n",
+        " ê 35\n",
+        " ë 36\n",
+        " î 37\n",
+        " ï 38\n",
+        " ô 39\n",
+        " ö 40\n",
+        " ù 41\n",
+        " û 42\n",
+        " ü 43\n",
+        " ÿ 44\n",
+        " ç 45\n",
+        " \"\"\"\n",
+        "#associer des caractères à des valeurs numériques\n",
+        "class TextTransform:\n",
+        "  \"\"\"Maps characters to integers and vice versa\"\"\"\n",
+        "  def __init__(self):\n",
+        "      char_map_str = char_map_str\n",
+        "      self.char_map = {}\n",
+        "      self.index_map = {}\n",
+        "      for line in char_map_str.strip().split('\\n'):\n",
+        "          ch, index = line.split()\n",
+        "          self.char_map[ch] = int(index)\n",
+        "          self.index_map[int(index)] = ch\n",
+        "      self.index_map[1] = ' '\n",
+        "\n",
+        "  def text_to_int(self, text):\n",
+        "      \"\"\" Use a character map and convert text to an integer sequence \"\"\"\n",
+        "      int_sequence = []\n",
+        "      for c in text:\n",
+        "          if c == ' ':\n",
+        "              ch = self.char_map['']\n",
+        "          else:\n",
+        "              ch = self.char_map[c]\n",
+        "          int_sequence.append(ch)\n",
+        "      return int_sequence\n",
+        "\n",
+        "  def int_to_text(self, labels):\n",
+        "      \"\"\" Use a character map and convert integer labels to an text sequence \"\"\"\n",
+        "      string = []\n",
+        "      for i in labels:\n",
+        "          string.append(self.index_map[i])\n",
+        "      return ''.join(string).replace('', ' ')\n",
+        "\n",
+        "nombreCaracteres = 46\n",
+        "\n",
+        "cnn = CNNNEtwork(nombreCaracteres)\n",
+        "summary(cnn.cuda(), (1,64,44)) #(nombre de channels, frequence, temps)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zFqcIJnIc4ZK",
+        "outputId": "5ede0811-9c1c-401a-988d-27eee210363a"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/bin/bash: line 1: torch: command not found\n",
+            "----------------------------------------------------------------\n",
+            "        Layer (type)               Output Shape         Param #\n",
+            "================================================================\n",
+            "            Conv2d-1          [-1, 128, 66, 46]           1,280\n",
+            "              ReLU-2          [-1, 128, 66, 46]               0\n",
+            "         MaxPool2d-3          [-1, 128, 33, 23]               0\n",
+            "            Conv2d-4          [-1, 256, 35, 25]         295,168\n",
+            "              ReLU-5          [-1, 256, 35, 25]               0\n",
+            "         MaxPool2d-6          [-1, 256, 17, 12]               0\n",
+            "            Conv2d-7          [-1, 512, 19, 14]       1,180,160\n",
+            "              ReLU-8          [-1, 512, 19, 14]               0\n",
+            "         MaxPool2d-9            [-1, 512, 9, 7]               0\n",
+            "           Conv2d-10          [-1, 1024, 11, 9]       4,719,616\n",
+            "             ReLU-11          [-1, 1024, 11, 9]               0\n",
+            "        MaxPool2d-12           [-1, 1024, 5, 4]               0\n",
+            "          Flatten-13                [-1, 20480]               0\n",
+            "           Linear-14                   [-1, 46]         942,126\n",
+            "          Softmax-15                   [-1, 46]               0\n",
+            "================================================================\n",
+            "Total params: 7,138,350\n",
+            "Trainable params: 7,138,350\n",
+            "Non-trainable params: 0\n",
+            "----------------------------------------------------------------\n",
+            "Input size (MB): 0.01\n",
+            "Forward/backward pass size (MB): 14.67\n",
+            "Params size (MB): 27.23\n",
+            "Estimated Total Size (MB): 41.91\n",
+            "----------------------------------------------------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
