--- a/VoxNote.ipynb
+++ b/VoxNote.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 148,
       "metadata": {
         "id": "a4QSC_m-8aL-"
       },
@@ -159,13 +159,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 149,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UL25QMQ9YtRV",
-        "outputId": "d83bd5d2-bfbd-47bf-e54a-1e167945b3af"
+        "outputId": "0a8e048c-66e8-471c-9e6a-514bec28bb66"
       },
       "outputs": [
         {
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 150,
       "metadata": {
         "id": "iSiu0ku4h3lz"
       },
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 151,
       "metadata": {
         "id": "zFqcIJnIc4ZK"
       },
@@ -433,22 +433,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 152,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "15ed70NTyntC",
-        "outputId": "3bde95b2-8f0a-4053-8938-6045f5af3005"
+        "outputId": "e6770eb3-7fe2-4e4f-ede0-67df76250c26"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Entrainement de l'époque 0\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stderr",
@@ -461,21 +454,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Le pourcentage d'erreur à l'époque 0 = 86.63383152173914% pour les lettres et la divergence(loss) = -3.831991195678711\n",
-            "Entrainement de l'époque 1\n",
-            "Entrainement de l'époque 2\n",
-            "Le pourcentage d'erreur à l'époque 2 = 86.74422554347827% pour les lettres et la divergence(loss) = -3.8320770263671875\n",
-            "Entrainement de l'époque 3\n",
-            "Entrainement de l'époque 4\n",
-            "Le pourcentage d'erreur à l'époque 4 = 86.61684782608695% pour les lettres et la divergence(loss) = -3.8322577476501465\n",
-            "Entrainement de l'époque 5\n",
-            "Entrainement de l'époque 6\n",
-            "Le pourcentage d'erreur à l'époque 6 = 85.63179347826086% pour les lettres et la divergence(loss) = -3.8325443267822266\n",
-            "Entrainement de l'époque 7\n",
-            "Entrainement de l'époque 8\n",
-            "Le pourcentage d'erreur à l'époque 8 = 85.62330163043478% pour les lettres et la divergence(loss) = -3.833101987838745\n",
-            "Entrainement de l'époque 9\n",
-            "rnn entraîné sauvegardé sur feedforwardnet.pth\n"
+            "rnn entraîné sauvegardé sur /content/drive/MyDrive/ColabNotebooks/modele.pth\n"
           ]
         }
       ],
@@ -630,7 +609,7 @@
         "\n",
         "  return decode, attendu\n",
         "\n",
-        "\n",
+        "#Le dataset utilisé provient de : https://datashare.ed.ac.uk/handle/10283/2353\n",
         "FICHIER_ANNOTE = \"/content/drive/MyDrive/ColabNotebooks/SiwisFrenchSpeechSynthesisDatabase/lists/all_text.list\"\n",
         "FICHIER_AUDIO = \"/content/drive/MyDrive/ColabNotebooks/SiwisFrenchSpeechSynthesisDatabase/lists/all_wavs.list\"\n",
         "\n",
@@ -722,23 +701,22 @@
         "    self.texte_transforme = texte_transforme\n",
         "    self.traiterAudio = traiterAudio\n",
         "\n",
-        "  def inference(fichierAudio) :\n",
+        "  def inference(self, fichierAudio) :\n",
         "    with torch.no_grad():\n",
-        "      fichierAudio = fichierAudio.to(processeur)\n",
-        "      texte_transforme = texte_transforme.to(processeur)\n",
         "      fichierAudio = self.traiterAudio.audioTraite(fichierAudio)\n",
         "      inference = self.LSTM(fichierAudio)\n",
         "      texteDeduit = self.greedyDecoderInference(inference, texte_transforme, 66)\n",
+        "      return texteDeduit\n",
         "\n",
-        "  def greedyDecoderInference(prediction, texte_transforme, caractere_vide) :\n",
+        "  def greedyDecoderInference(self, prediction, texte_transforme, caractere_vide) :\n",
         "\n",
         "    decode = []\n",
         "    #prediction : contient 20 batch -> prediction[x] = tous les tensors représentant les caractères -> prediction[x][y] = probabilité de chaque caractère\n",
         "    for valeurs in enumerate(prediction) : #valeurs correspond au caracère à chaque endroit possible (prediction contient : [tensor, device utilisé])\n",
-        "      for probabilite in enumerate(valeurs[1]) : #index correspond au caractère à un endroit précis\n",
-        "        index = torch.argmax(probabilite[1])\n",
-        "        if index != caractere_vide:\n",
-        "          decode.append(index)\n",
+        "      index = torch.argmax(valeurs[1])\n",
+        "      print(index)\n",
+        "      if index != caractere_vide:\n",
+        "        decode.append(index)\n",
         "    decode = texte_transforme.int_to_text(decode) #valeurs du LSTM\n",
         "    return decode\n",
         "\n",
@@ -934,59 +912,32 @@
         "texte_transforme = TextTransform(char_map_str)\n",
         "\n",
         "traiterAudio = traiterAudio(melSpectrogram, SAMPLE_RATE, NOMBRE_ECHANTILLONS, processeur, nombre_caracteres)\n",
-        "inference = Inference(texte_transforme, traiterAudio)\n"
+        "inference = Inference(texte_transforme, traiterAudio)\n",
+        "\n",
+        "attendu = open(\"\",\"r\",  encoding=\"utf-8\") #nom fichier texte\n",
+        "pathInfere = \"\" #nom fichier audio\n",
+        "print('attendu :', attendu.read())\n",
+        "print('\\ninfere :', inference.inference(pathInfere))\n"
       ],
       "metadata": {
         "id": "NQdDY4XeWiEN",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 321
+          "height": 211
         },
-        "outputId": "761c2b78-13ab-4af5-ae5f-4cc2056b029d"
+        "outputId": "586707ae-ca73-42b8-81b8-c5c7d11937b1"
       },
-      "execution_count": 5,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "error",
           "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: 'feedforwardnet.pth'",
+          "evalue": "[Errno 2] No such file or directory: ''",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-ffab980c499f>\u001b[0m in \u001b[0;36m<cell line: 224>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    222\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[0mtraiterAudio\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtraiterAudio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmelSpectrogram\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSAMPLE_RATE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNOMBRE_ECHANTILLONS\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprocesseur\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnombre_caracteres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 224\u001b[0;31m \u001b[0minference\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexte_transforme\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtraiterAudio\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-5-ffab980c499f>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, texte_transforme, traiterAudio)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mInference\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtexte_transforme\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtraiterAudio\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLSTM\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'feedforwardnet.pth'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#à changer avec le nom du fichier du modèle sauvegardé\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtexte_transforme\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtexte_transforme\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtraiterAudio\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtraiterAudio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/serialization.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(f, map_location, pickle_module, weights_only, mmap, **pickle_load_args)\u001b[0m\n\u001b[1;32m    996\u001b[0m         \u001b[0mpickle_load_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'encoding'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    997\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 998\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mopened_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    999\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_is_zipfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopened_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1000\u001b[0m             \u001b[0;31m# The zipfile reader is going to advance the current file position.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/serialization.py\u001b[0m in \u001b[0;36m_open_file_like\u001b[0;34m(name_or_buffer, mode)\u001b[0m\n\u001b[1;32m    443\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    444\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0m_is_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 445\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    446\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    447\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'w'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/serialization.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, mode)\u001b[0m\n\u001b[1;32m    424\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_opener\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    425\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 426\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    427\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__exit__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'feedforwardnet.pth'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "file"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        },
-        "id": "mc8Uc5dCJu8o",
-        "outputId": "ea013da7-ceb9-4d02-89d8-2ba81ce20e24"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'files' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-2467104805c5>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfiles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"feedforwardnet.pth\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'files' is not defined"
+            "\u001b[0;32m<ipython-input-153-e6995f321b90>\u001b[0m in \u001b[0;36m<cell line: 225>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[0minference\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexte_transforme\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtraiterAudio\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 225\u001b[0;31m \u001b[0mattendu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    226\u001b[0m \u001b[0mpathInfere\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    227\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: ''"
           ]
         }
       ]
